<resources>
    <string name="app_name">RIDE</string>

    <string name="ride_title">R I D E</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="dont_have_account_text">Don\'t have an account?</string>
    <string name="update_account_text">To update an account property, change value of respective property in form below and click \"Update Account.\"</string>
    <string name="signup_button">Sign Up</string>
    <string name="username">username</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_account_text">Already have an account?</string>
    <string name="edit_button">Update Account</string>
    <string name="user_settings_text">User Settings</string>
    <string name="delete_button">Delete Account</string>
</resources>
